# Mentoria_2020_2

Sem_1/: CMakeLists.txt  Ejercicio_1.cpp  Ejercicio_2.cpp  Ejercicio_3.cpp  Tarea_Lesly.cpp  main.cpp
Sem_3/: Bucle_Do_While.cpp  Bucle_While.cpp  Bucle_for.cpp  CMakeLists.txt  Sentencia_if.cpp
Sem_4/: CMakeLists.txt  Concepto_Cadena.cpp  Concepto_Matriz.cpp  Ejercicio_1.cpp  Ejercicio_4.cpp
Sem_5/: CMakeLists.txt  Concepto_Funcion.cpp  Ejercicio_1.cpp  Ejercicio_2.cpp  Ejercicio_3.cpp  Ejercicio_4.cpp  Ejercicio_5.cpp  Parametro_matriz.cpp  Parametro_vector.cpp  Recursividad.cpp  Referencia.cpp
Sem_6/: CMakeLists.txt  Ejercicio_4.cpp  Ejercicio_5.cpp  Ejercicio_6.cpp  Ejercicio_7.cpp  ejercicio_1.cpp  ejercicio_2.cpp  ejercicio_3.cpp  main.cpp
Sem_7/: CMakeLists.txt
Sem_7/Ejercicio_1/: 9B.Main1.cpp  9B.Main2.cpp  9B.Main3.cpp  CAlumno.cpp  CAlumno.h  CCurso.cpp  CCurso.h  CMakeLists.txt  CProfesor.cpp  CProfesor.h  Funciones.h  Main1.cpp  Main2.cpp  Tipos.h
Sem_7/Ejercicio_1/__MACOSX/: ._Persona
Sem_7/Ejercicio_1/__MACOSX/Persona/: ._CAlumno.cpp  ._CAlumno.h  ._CCurso.cpp  ._CCurso.h  ._CMakeLists.txt  ._CProfesor.cpp  ._CProfesor.h  ._Funciones.h  ._Main1.cpp  ._Main2.cpp  ._Main3.cpp  ._Tipos.h
sem_2/: CMakeLists.txt  Ejercicio_1.cpp  Ejercicio_3.cpp  Ejercicio_4.cpp
