cmake_minimum_required(VERSION 3.17)
project(Sem_6)

set(CMAKE_CXX_STANDARD 14)

add_executable(Sem_6 main.cpp)
add_executable(Sem_6_1 ejercicio_1.cpp)
add_executable(Sem_6_2 ejercicio_2.cpp)
add_executable(Sem_6_3 ejercicio_3.cpp)
add_executable(Sem_6_4 ejercicio_4.cpp)
add_executable(Sem_6_5 ejercicio_5.cpp)
add_executable(Sem_6_6 ejercicio_6.cpp)
add_executable(Sem_6_7 ejercicio_7.cpp)