cmake_minimum_required(VERSION 3.16)
project(Sem_2)

set(CMAKE_CXX_STANDARD 14)

add_executable(Sem_2_1 Ejercicio_1.cpp)
add_executable(Sem_2_2 Ejercicio_2.cpp)
add_executable(Sem_2_3 Ejercicio_3.cpp)
add_executable(Sem_2_4 Sentencia_if.cpp)
add_executable(Sem_2_5 Sentencia_switch.cpp)
add_executable(Sem_2_6 Ejercicio_4.cpp)