cmake_minimum_required(VERSION 3.14)
project(Persona)

set(CMAKE_CXX_STANDARD 17)

add_executable(Persona_1 CAlumno.cpp CAlumno.h CProfesor.cpp CProfesor.h Tipos.h Funciones.h CCurso.cpp CCurso.h Main1.cpp)
add_executable(Persona_2 CAlumno.cpp CAlumno.h CProfesor.cpp CProfesor.h Tipos.h Funciones.h CCurso.cpp CCurso.h Main2.cpp)
add_executable(Persona_3 CAlumno.cpp CAlumno.h CProfesor.cpp CProfesor.h Tipos.h Funciones.h CCurso.cpp CCurso.h Main3.cpp)